# geekbest

./: README.md  app.py  pyproject.toml
ext/api/: api.py  conftest.py
ext/api/candidate/: model_candidate.py  query_candidate.py
ext/api/candidate/tests/: test_query_candidate.py
ext/api/filters/: query_filters.py
ext/api/graphql/: query.py  schema.py
ext/api/job/: model_job.py  query_job.py
ext/api/job/tests/: test_query_job.py
ext/database/: database.py
ext/graphql/: query.py  resolver.py  schema.py
ext/model/: role.py
public/: mock_db.json
utils/: args.py
