[tool.poetry]
name = "bestgeek-server"
version = "0.1.0"
description = ""
authors = ["Juan Barros <juan.barros@ccc.ufcg.edu.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-GraphQL = "^2.0.1"
graphene-mongo = "^0.2.13"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
python-dotenv = "^0.17.1"
mongomock = "^3.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
